--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,15 @@
 /****** START HOME GRID ******/
 main {
     display: grid;
-    grid-template-rows: auto auto auto auto auto;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 260px 260px auto auto;
+    grid-template-columns: 50% 50%;
     grid-template-areas:
         "header header"
         "contentBannerA contentBannerA"
         "contentBannerB contentBannerB" 
         "introText introText"
         "footer footer";
-    background-color: #CC0000; /* test colour for troubleshooting */
+    /* background-color: #CC0000; test colour for troubleshooting */
 }
 
 
@@ -58,7 +58,7 @@ header {
     /* same padding as .header and primaryNavHeader */
 }
 
-section.contentBannerA {
+section .contentBannerA {
     grid-area: contentBannerA;
     flex-flow: row nowrap;
     display: flex;
@@ -66,7 +66,7 @@ section.contentBannerA {
     justify-content: flex-start;
 }
 
-section.contentBannerB {
+section .contentBannerB {
     grid-area: contentBannerB;
     flex-flow: row nowrap;
     display: flex;
@@ -107,7 +107,7 @@ section.contentBannerB {
 
 .contentBanner {
     display: flex; 
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: flex-start;
     align-items: center;
 }
@@ -118,12 +118,13 @@ section.contentBannerB {
 }
 
 /* Intro Text Grid Areas */
-.introText {
+section .introText {
     grid-area: introText;
-    padding: 20px;
     color: var(--mainFontColor);
     background-color: var(--mainBackgroud);
     width: 70%;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 /* Footer Grid Areas  */
