mobile view fix but No images
Fixed layers of text and alignment and primaryNav in mobile view.
But, fixed without images.  New (?) issue with Case Study titles.

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@
 /****** START HOME GRID ******/
 main {
     display: grid;
-    grid-template-rows: auto 260px 260px auto auto;
-    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: 1fr 1fr;
     grid-template-areas:
         "header header"
         "contentBannerA contentBannerA"
@@ -55,6 +55,7 @@ header {
     background-color :#ffffff;
     text-align: right;
     padding: 20px;
+    flex-flow: row wrap;
     /* same padding as .header and primaryNavHeader */
 }
 
@@ -107,7 +108,7 @@ section .contentBannerB {
 
 .contentBanner {
     display: flex; 
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
 }
@@ -115,6 +116,8 @@ section .contentBannerB {
 .contentBanner > div {
     /* background-color: coral; */
     padding: 20px;
+    display: flex;
+    flex-flow: row wrap;
 }
 
 /* Intro Text Grid Areas */
@@ -507,32 +510,32 @@ h1.homepage{
     header {
         grid-area: header;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: flex-start;
         flex-flow: row wrap;
         padding: 20px;
         /* same padding as .header and primaryNavHeader */
     }
 
-
     section.contentBannerA {
         grid-area: contentBannerA;
         flex-flow: row wrap;
         display: flex;
-        align-items: stretch;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: flex-start;
     }
 
     section.contentBannerB {
         grid-area: contentBannerB;
         flex-flow: row wrap;
         display: flex;
-        align-items: stretch;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: flex-start;
     }
 
     .introText {
         grid-area: introText;
+        display: flex;
         padding: 20px;
         color: var(--mainFontColor);
         background-color: var(--mainBackgroud);
@@ -548,6 +551,7 @@ h1.homepage{
         padding: 15px;
         justify-content: space-between;
         flex-flow: row wrap;
+        align-items: flex-start;
     }
 
     }
